--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
     html {
         font-family: "Stint Ultra Condensed", serif;
         font-weight: 500;
-        /* letter-spacing: 1px; */
+        letter-spacing: 1px;
     }
 }
